--- a/deployArtifact.yaml
+++ b/deployArtifact.yaml
@@ -5,7 +5,7 @@
     -
       copy:
         dest: /tmp/.
-        src: "{{ WORKSPACE }}/target/oms-eureka-service-0.0.1-SNAPSHOT.jar"
+        src: "/var/lib/jenkins/workspace/ansible/target/oms-eureka-service-0.0.1-SNAPSHOT.jar"
       name: "Copy Artifact"
     -
       name: "Run Artifact"
